# BUDAlloc

./: .clang-format  .config.json  .gitignore  .gitmodules  MITLicense  Makefile  README.md
libkernel/: .gitignore  CMakeLists.txt  README.md  apply_patch.sh
libkernel/include/: boot.h  console.h  debug.h  kconfig.h  kmalloc.h  kthread.h  libkernel.h  memory.h  ota.h  plat.h  rwlock.h  spin_lock.h  syscall.h  syscall_64.h  vmem.h
libkernel/include/lib/: compiler.h  compiler_attributes.h  ctype.h  err.h  errno.h  hash.h  hashtable.h  ilog2.h  kerncompat.h  list.h  minmax.h  stdarg.h  stddef.h  string.h  trie.h  types.h
libkernel/include/sbpf/: bpf.h
libkernel/libmalloc/patches/: mimalloc.patch
libkernel/src/alloc/: alloc_alias.c  alloc_canonical.c  alloc_entry.c
libkernel/src/boot/: boot.c
libkernel/src/bpf/: bpf.c
libkernel/src/console/: console.c
libkernel/src/context/: kthread.c
libkernel/src/lib/: ctype.c  debug.c  errno.c  plat_linux.c  trie.c
libkernel/src/memory/: kmalloc.c  memory.c  page_fault.bpf.c  page_ops.bpf.c  vma_anon.c  vmem.c
libkernel/src/mmap/: mmap.c
libkernel/src/sync/: spin_lock.c
macrobench/: README.md  environment  server_conf
macrobench/apache2/: .gitignore  README.md  bench_apache2.sh  install.sh  parse_memory.py  parse_result.py
macrobench/common/: bench-progress-hook.sh  bench-queued-hook.sh  bench-start-hook.sh  bench_spec.sh  connect_10g.sh  eval.sh  run_apache_nginx_client.sh  run_apache_nginx_server.sh  track_memory.sh  upload-webhook.sh
macrobench/nginx/: .gitignore  README.md  bench_nginx.sh  install-dangzero.sh  install.sh  nginx.conf  parse_memory.py  parse_result.py
macrobench/parsec/: .gitignore  README.md  bench_parsec.sh  bench_parsec_threads.sh  count_malloc.c  eval.sh  install.sh  optimize_off.patch
macrobench/spec2006/: .gitignore  README.md  bench_spec2006.sh  spec_config.cfg
macrobench/spec2017/: .gitignore  README.md  bench_spec2017.sh  spec_config.cfg
microbench/: Makefile  README.md
microbench/lib/: time_stat.c  time_stat.h
microbench/src/: atomic_perf.c  fork_perf.c  malloc_perf.c  memory_perf.c  vfork_perf.c
scripts/: setup.sh  stat_kernel.sh
scripts/perf/: .gitignore  README.md  func_classifier.sh  run_perf_SPECCPU_2006.sh
scripts/perf/python_helper/: classify.py  classify_func.py  func_name_extract.py  parse_file.py
unit_test/: .gitignore  CMakeLists.txt  README.md
unit_test/include/unit_test/: debug.h
unit_test/src/: calloc.c  double_free.c  fork.c  malloc.c  memalign.c  realloc.c  use_after_free.c
validation/cves/: .gitignore  Makefile  README.md  build_all.py  build_serial.sh  clean_all.sh  install_lib.sh  run_all.py
validation/cves/exploit_database/: build_all.py
validation/cves/exploit_database/binaryen-cve2019-7703/: .gitignore  README.md  UAF  clean.sh  install.sh  run_poc.sh
validation/cves/exploit_database/libmimedir0.5.1-cve2015-3205/: .gitignore  README.md  clean.sh  install.sh  poc.c  poc.py  run_poc.sh
validation/cves/exploit_database/libredwg-cve2022-35164/: .gitignore  README.md  clean.sh  install.sh  poc  run_poc.sh
validation/cves/exploit_database/libzip-cve2019-17582/: .gitignore  README.md  clean.sh  install.sh  run_poc.sh
validation/cves/exploit_database/lua-cve2019-6706/: .gitignore  README.md  clean.sh  install.sh  poc.lua  run_poc.sh
validation/cves/exploit_database/nasm-cve2019-8343/: .gitignore  README.md  clean.sh  install.sh  run_poc.sh
validation/cves/exploit_database/nginx-cve2020-24346/: .gitignore  README.md  clean.sh  install.sh  poc.js  run_poc.sh
validation/cves/mruby/: mruby_cve.csv
validation/cves/mruby/cve2022-1106/: README.md  install.sh  poc.rb  run_poc.sh
validation/cves/mruby/cve2022-1934/: README.md  clean.sh  install.sh  run_poc.sh
validation/cves/mruby/issue3515/: README.md  install.sh  poc.rb  run_poc.sh
validation/cves/php/php5.4.44-cve2015-6835/: README.md  clean.sh  install.sh  run_poc.sh
validation/cves/php/php5.5.14-cve2015-2787/: .gitignore  README.md  clean.sh  disable_custom_allocator.patch  install.sh  run_poc.sh
validation/cves/php/php7.0.7-cve2016-5773/: .gitignore  README.md  clean.sh  install.sh  poc.php  run_poc.sh
validation/cves/php/php7.4.0-bug-66783/: README.md  clean.sh  disable_custom_allocator.patch  poc.php  run_poc.sh
validation/cves/php/php7.4.0-bug-80927/: .gitignore  README.md  install.sh  poc.php  run_poc.sh
validation/cves/python/: build_all.py  clean_all.sh
validation/cves/python/python2.7.10-issue24613/: .gitignore  (+5 more)
validation/hardsheap/: run.sh  run_hardsheap.sh
validation/juliet/: .gitignore  CMakeLists.txt  bench_juliet.sh  install.sh  juliet-run.sh  juliet.py
(+70 files in other folders)
